# brian2genn

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.md  MANIFEST.in  README.md  appveyor.yml  azure-pipelines.yml  azure-steps.yml  brian2genn-1.0rc4-py27_1.tar.bz2  brian2genn-1.0rc4-py35_1.tar.bz2  brian2genn-1.0rc4-py36_1.tar.bz2  brian_preferences  cuda_toolkit.rb  genn_generator.py  pyproject.toml  setup.py  simple_test.py
.github/workflows/: publish_to_pypi.yml  test_latest.yml  testsuite.yml
brian2genn/: .gitignore  __init__.py  analyze.m  binomial.py  codeobject.py  correctness_testing.py  device.py  genn_generator.py  insyn.py  preferences.py  renderer.py  run_brian_tests.py  run_brian_tests_CPU.py  run_correctness_testing.py  template_notes.txt  testing_notes.txt
brian2genn/b2glib/: benchmark.h  convert_synapses.cc  convert_synapses.h  copy_static_arrays.h
brian2genn/sphinxext/: __init__.py  briandoc.py  docscrape.py  docscrape_sphinx.py  (+3 more)
conda_recipe/: bld.bat  build.sh  meta.yaml  run_test.py
continuous-integration/: azure-steps.yml
docs_sphinx/: conf.py  index.rst
examples/: .gitignore  insyn_translation.py  shortEx.py  simple_example.py  simple_example_HH.py  simple_example_HH_CPP.py  simple_example_synapses.py  simple_example_with_synapses.py  simple_spikesource.py  testSummedVars.py
scripts/: build_conda_packages.py  conda-server-push.py  cuda_toolkit.rb  loadResult.m  prepare_release.py  run_brian_tests.py  run_brian_tests_32bit.py  run_brian_tests_CPU.py  run_brian_tests_CPU_32bit.py  run_correctness_testing.py  skip_tests.txt  test_utils.py
(+48 files in other folders)
